# bygfoot-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  bygfoot.py  pyproject.toml
bygfoot_tui/: __init__.py  agent_api.py  app.py  commentary.py  data.py  engine.py  screens.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py
