[project]
name = "bygfoot-tui"
version = "0.1.0"
description = "Terminal-native Bygfoot Football Manager"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bygfoot_tui"]

[tool.setuptools.package-data]
bygfoot_tui = ["tui.tcss"]
